# drone-path-planning

./: .gitignore  CMakeLists.txt  README.md  environment.yml
example_data/: small_map.txt  test_map.txt
src/: CMakeLists.txt  elevation_map.cc  elevation_map.h  path_planner.cc  path_planner.h
tests/: CMakeLists.txt  map_read_test.cc  path_planner_test.cc  plot_data.py
