project(drone_path_planning)
cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
enable_testing()

include(CheckCXXCompilerFlag)
if (MSVC)
  CHECK_CXX_COMPILER_FLAG("/std:c++14" COMPILER_SUPPORTS_CXX14)
else ()
  CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
endif()
if(COMPILER_SUPPORTS_CXX14)
	if (MSVC)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++14")
	else ()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
	endif ()
else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support. Update your compiler and try again.")
endif()

add_subdirectory(src)
add_subdirectory(tests)